@@ -386,7 +386,10 @@ def getMinUpgrade(vulnerableList, unaffectedList, minimize=True):
 			c_pv = portage.catpkgsplit(c)
 			i_pv = portage.catpkgsplit(portage.best(v_installed))
 			if portage.pkgcmp(c_pv[1:], i_pv[1:]) > 0 \
-					and (rValue == None or (minimize ^ (portage.pkgcmp(c_pv[1:], portage.catpkgsplit(rValue)[1:]) > 0))) \
+					and (rValue == None \
+						or not match("="+rValue, "porttree") \
+						or (minimize ^ (portage.pkgcmp(c_pv[1:], portage.catpkgsplit(rValue)[1:]) > 0)) \
+							and match("="+c, "porttree")) \
 					and portage.db["/"]["porttree"].dbapi.aux_get(c, ["SLOT"]) == portage.db["/"]["vartree"].dbapi.aux_get(portage.best(v_installed), ["SLOT"]):
 				rValue = c_pv[0]+"/"+c_pv[1]+"-"+c_pv[2]
 				if c_pv[3] != "r0":		# we don't like -r0 for display
